--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
             <div class="navbar-phone_section flex">
               <div class="flex item-center gap-1">
                 <img
-                  width="35"
-                  height="35"
+                  width="28"
+                  height="28"
                   alt="call-us"
                   class="lazy"
                   src="https://pristinegreencleaning.com/assets/icons/call.png"
@@ -62,7 +62,7 @@
           <div class="navbar-section-2">
             <!-- Links -->
             <ul class="nav-links flex">
-              <li class="link">Cleaning Services</li>
+              <li class="link clean-link">Cleaning Services</li>
               <li class="link">Request a Quote</li>
               <li class="link">Service Areas</li>
               <li class="link">Gallery</li>
@@ -72,7 +72,57 @@
           <!-- show on hover (cleaning services ) -->
           <div></div>
         </div>
-        <div class="clean-serivces-hover hidden"></div>
+      </div>
+      <div class="clean-serivces-hover">
+        <div class="flex justify-between">
+          <div>
+            <h2>Cleaning Services</h2>
+            <div class="flex cleaning-services-hover-sections justify-between">
+              <div class="flex flex-col cleaning-services-hover-section">
+                <p class="">
+                  <a href="#">Carpet Cleaning</a>
+                </p>
+                <p>
+                  <a href="#">Upholstery Cleaning</a>
+                </p>
+                <p>
+                  <a href="#">Area Rug Cleaning</a>
+                </p>
+                <p>
+                  <a href="#">Matterss Cleaning</a>
+                </p>
+                <p>
+                  <a href="#">Oriental Rug Cleaning</a>
+                </p>
+              </div>
+              <div class="cleaning-services-hover-section">
+                <p>
+                  <a href="#">Green Cleaning</a>
+                </p>
+                <p>
+                  <a href="#">Commerical Cleaning</a>
+                </p>
+                <p>
+                  <a href="#">Couch Cleaning</a>
+                </p>
+                <p>
+                  <a href="#">Auto Interior Cleaning</a>
+                </p>
+                <p>
+                  <a href="#">Pet Stains And Odors Cleaning</a>
+                </p>
+              </div>
+            </div>
+          </div>
+          <!-- img section -->
+          <div>
+            <img
+              class="ddr-image img img-fluid"
+              src="https://pristinegreencleaning.com/assets/icons/Carpet-Upholstery-Cleaning-Google-Yelp-Rating.png"
+              alt="Carpet Upholstery Cleaning Google Yelp Rating"
+            />
+          </div>
+        </div>
       </div>
     </nav>
     <!-- Toggle menu section (only small devices) -->
@@ -170,6 +220,258 @@
         </div>
       </div>
     </main>
+    <footer>
+      <!-- section 1 -->
+      <div class="footer-1">
+        <div class="footer-1-container flex justify-between">
+          <div class="footer-1-container__imgs flex flex-col">
+            <div class="flex gap-1">
+              <a href="#">
+                <img
+                  rel="canonical"
+                  class="lazy"
+                  alt="twitter"
+                  width="32px"
+                  height="32px"
+                  src="https://pristinegreencleaning.com/assets/images/5296516_tweet_twitter_twitter logo_icon.svg"
+                  style
+                />
+              </a>
+              <a href="#">
+                <img
+                  rel="canonical"
+                  class="lazy"
+                  alt="facebook"
+                  width="32px"
+                  height="32px"
+                  src="https://pristinegreencleaning.com/assets/images/5365678_fb_facebook_facebook logo_icon.png"
+                  style
+                />
+              </a>
+              <a href="#">
+                <img
+                  rel="canonical"
+                  class="lazy"
+                  alt="instagram"
+                  width="32px"
+                  height="32px"
+                  src="https://pristinegreencleaning.com/assets/images/5296765_camera_instagram_instagram logo_icon.webp"
+                  style
+                />
+              </a>
+            </div>
+            <div>
+              <a href="#">
+                <img
+                  rel="canonical"
+                  class="trade-logo lazy"
+                  alt="paypal payments"
+                  width="180"
+                  height="180"
+                  src="https://pristinegreencleaning.com/assets/images/Paypal.webp"
+                  style
+                />
+              </a>
+            </div>
+            <div>
+              <a href="#">
+                <img
+                  rel="canonical"
+                  class="trade-logo lazy"
+                  alt="paypal payments"
+                  width="186"
+                  height="156"
+                  src="https://pristinegreencleaning.com/assets/images/Venmo-Payment.webp"
+                  style
+                />
+              </a>
+            </div>
+            <div>
+              <img
+                rel="canonical"
+                class="trade-logo lazy"
+                alt="Payments"
+                width="200"
+                height="30"
+                src="https://pristinegreencleaning.com/assets/images/secure-stripe-payment-logo.png"
+                style
+              />
+            </div>
+            <div>
+              <img
+                rel="canonical"
+                class="logo-white lazy"
+                alt="PristineGreenCleaning"
+                width="256"
+                height="57"
+                src="https://pristinegreencleaning.com/assets/logo/CarpetAndUpholsteryCleaning_256x57.png"
+                style
+              />
+            </div>
+          </div>
+          <div class="footer-1-container__Service">
+            <p class="footer-heading">SERIVCE AREAS</p>
+            <ul class="footer-1-container__Service-links flex flex-col gap-1">
+              <li>
+                <a href="#">Astoria</a>
+              </li>
+              <li>
+                <a href="#">East Village</a>
+              </li>
+              <li>
+                <a href="#">Gramercy Park</a>
+              </li>
+              <li>
+                <a href="#">Lower East Side</a>
+              </li>
+              <li>
+                <a href="#">Maspeth </a>
+              </li>
+              <li>
+                <a href="#">Midtown </a>
+              </li>
+              <li>
+                <a href="#">Park Slope</a>
+              </li>
+              <li>
+                <a href="#">Prospect Park South</a>
+              </li>
+              <li>
+                <a href="#">Queens Village </a>
+              </li>
+              <li>
+                <a href="#">Union Square </a>
+              </li>
+              <li>
+                <a href="#">Upper West Side </a>
+              </li>
+              <li>
+                <a href="#">Union Square </a>
+              </li>
+              <li>
+                <a href="#">Woodside </a>
+              </li>
+              <li>
+                <a href="#">Woodhaven</a>
+              </li>
+              <li>
+                <a href="#">View More Areas</a>
+              </li>
+            </ul>
+          </div>
+          <div class="footer-1-container__Service">
+            <p class="footer-heading">SERIVCE AREAS</p>
+            <ul class="footer-1-container__Service-links flex flex-col gap-1">
+              <li>
+                <a href="#">Astoria</a>
+              </li>
+              <li>
+                <a href="#">East Village</a>
+              </li>
+              <li>
+                <a href="#">Gramercy Park</a>
+              </li>
+              <li>
+                <a href="#">Lower East Side</a>
+              </li>
+              <li>
+                <a href="#">Maspeth </a>
+              </li>
+              <li>
+                <a href="#">Midtown </a>
+              </li>
+              <li>
+                <a href="#">Park Slope</a>
+              </li>
+              <li>
+                <a href="#">Prospect Park South</a>
+              </li>
+              <li>
+                <a href="#">Queens Village </a>
+              </li>
+              <li>
+                <a href="#">Union Square </a>
+              </li>
+              <li>
+                <a href="#">Upper West Side </a>
+              </li>
+              <li>
+                <a href="#">Union Square </a>
+              </li>
+              <li>
+                <a href="#">Woodside </a>
+              </li>
+              <li>
+                <a href="#">Woodhaven</a>
+              </li>
+              <li>
+                <a href="#">View More Areas</a>
+              </li>
+            </ul>
+          </div>
+          <div class="footer-1-container__Service">
+            <p class="footer-heading">SERIVCE AREAS</p>
+            <ul class="footer-1-container__Service-links flex flex-col gap-1">
+              <li>
+                <a href="#">Astoria</a>
+              </li>
+              <li>
+                <a href="#">East Village</a>
+              </li>
+              <li>
+                <a href="#">Gramercy Park</a>
+              </li>
+              <li>
+                <a href="#">Lower East Side</a>
+              </li>
+              <li>
+                <a href="#">Maspeth </a>
+              </li>
+              <li>
+                <a href="#">Midtown </a>
+              </li>
+              <li>
+                <a href="#">Park Slope</a>
+              </li>
+              <li>
+                <a href="#">Prospect Park South</a>
+              </li>
+              <li>
+                <a href="#">Queens Village </a>
+              </li>
+              <li>
+                <a href="#">Union Square </a>
+              </li>
+              <li>
+                <a href="#">Upper West Side </a>
+              </li>
+              <li>
+                <a href="#">Union Square </a>
+              </li>
+              <li>
+                <a href="#">Woodside </a>
+              </li>
+              <li>
+                <a href="#">Woodhaven</a>
+              </li>
+              <li>
+                <a href="#">View More Areas</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+      <div class="footer-2 flex flex-col">
+        <div class="footer-2-links">
+          <a href="#">Privacy Policy</a> |
+          <a href="#">Sitemap</a>
+        </div>
+        <div>
+          <span>© 2023 PristineGreen Cleaning, LLC. All rights reserved.</span>
+        </div>
+      </div>
+      <!-- section 2 -->
+    </footer>
     <script src="./js/main.js"></script>
   </body>
 </html>
