--- a/index.html
+++ b/index.html
@@ -220,10 +220,267 @@
         </div>
       </div>
     </main>
+
+    <!-- Slider -->
+    <section class="slider-section">
+      <div class="slider-container">
+        <h3 class="slider-container-title">What We Do Best</h3>
+        <div class="slider-container-cards flex justify-between gap-6">
+          <!-- cards -->
+          <div class="slider-container-card">
+            <!-- img -->
+            <div class="slider-container-card-image">
+              <img
+                class="lazy"
+                alt="Baby sitting on clean carpet. "
+                title="Carpet-Cleaning-Baby-on-Carpet"
+                src="https://pristinegreencleaning.com/assets/images/service/carpet-cleaner-nyc.webp"
+                style
+              />
+            </div>
+            <!-- card details -->
+            <div class="slider-container-card-detail flex flex-col">
+              <p>Cartpet Cleaning</p>
+              <p>
+                As one of the top carpet cleaner services in NYC, we specialize
+                resolving all types of issues including pet stains, pet odors,
+                urine stains, food stains, wine stains and more!
+              </p>
+              <a href="#" class="slider-container-card-detail-learnmore"
+                >Learn More Carpet Cleaning</a
+              >
+            </div>
+          </div>
+          <div class="slider-container-card">
+            <!-- img -->
+            <div class="slider-container-card-image">
+              <img
+                class="lazy"
+                alt="Baby sitting on clean carpet. "
+                title="Carpet-Cleaning-Baby-on-Carpet"
+                src="https://pristinegreencleaning.com/assets/images/service/carpet-cleaner-nyc.webp"
+                style
+              />
+            </div>
+            <!-- card details -->
+            <div class="slider-container-card-detail flex flex-col">
+              <p>Cartpet Cleaning</p>
+              <p>
+                As one of the top carpet cleaner services in NYC, we specialize
+                resolving all types of issues including pet stains, pet odors,
+                urine stains, food stains, wine stains and more!
+              </p>
+              <a href="#" class="slider-container-card-detail-learnmore"
+                >Learn More Carpet Cleaning</a
+              >
+            </div>
+          </div>
+          <div class="slider-container-card">
+            <!-- img -->
+            <div class="slider-container-card-image">
+              <img
+                class="lazy"
+                alt="Baby sitting on clean carpet. "
+                title="Carpet-Cleaning-Baby-on-Carpet"
+                src="https://pristinegreencleaning.com/assets/images/service/carpet-cleaner-nyc.webp"
+                style
+              />
+            </div>
+            <!-- card details -->
+            <div class="slider-container-card-detail flex flex-col">
+              <p>Cartpet Cleaning</p>
+              <p>
+                As one of the top carpet cleaner services in NYC, we specialize
+                resolving all types of issues including pet stains, pet odors,
+                urine stains, food stains, wine stains and more!
+              </p>
+              <a href="#" class="slider-container-card-detail-learnmore"
+                >Learn More Carpet Cleaning</a
+              >
+            </div>
+          </div>
+          <div class="slider-container-card">
+            <!-- img -->
+            <div class="slider-container-card-image">
+              <img
+                class="lazy"
+                alt="Baby sitting on clean carpet. "
+                title="Carpet-Cleaning-Baby-on-Carpet"
+                src="https://pristinegreencleaning.com/assets/images/service/carpet-cleaner-nyc.webp"
+                style
+              />
+            </div>
+            <!-- card details -->
+            <div class="slider-container-card-detail flex flex-col">
+              <p>Cartpet Cleaning</p>
+              <p>
+                As one of the top carpet cleaner services in NYC, we specialize
+                resolving all types of issues including pet stains, pet odors,
+                urine stains, food stains, wine stains and more!
+              </p>
+              <a href="#" class="slider-container-card-detail-learnmore"
+                >Learn More Carpet Cleaning</a
+              >
+            </div>
+          </div>
+          <div class="slider-container-card">
+            <!-- img -->
+            <div class="slider-container-card-image">
+              <img
+                class="lazy"
+                alt="Baby sitting on clean carpet. "
+                title="Carpet-Cleaning-Baby-on-Carpet"
+                src="https://pristinegreencleaning.com/assets/images/service/carpet-cleaner-nyc.webp"
+                style
+              />
+            </div>
+            <!-- card details -->
+            <div class="slider-container-card-detail flex flex-col">
+              <p>Cartpet Cleaning</p>
+              <p>
+                As one of the top carpet cleaner services in NYC, we specialize
+                resolving all types of issues including pet stains, pet odors,
+                urine stains, food stains, wine stains and more!
+              </p>
+              <a href="#" class="slider-container-card-detail-learnmore"
+                >Learn More Carpet Cleaning</a
+              >
+            </div>
+          </div>
+          <div class="slider-container-card">
+            <!-- img -->
+            <div class="slider-container-card-image">
+              <img
+                class="lazy"
+                alt="Baby sitting on clean carpet. "
+                title="Carpet-Cleaning-Baby-on-Carpet"
+                src="https://pristinegreencleaning.com/assets/images/service/carpet-cleaner-nyc.webp"
+                style
+              />
+            </div>
+            <!-- card details -->
+            <div class="slider-container-card-detail flex flex-col">
+              <p>Cartpet Cleaning</p>
+              <p>
+                As one of the top carpet cleaner services in NYC, we specialize
+                resolving all types of issues including pet stains, pet odors,
+                urine stains, food stains, wine stains and more!
+              </p>
+              <a href="#" class="slider-container-card-detail-learnmore"
+                >Learn More Carpet Cleaning</a
+              >
+            </div>
+          </div>
+          <div class="slider-container-card">
+            <!-- img -->
+            <div class="slider-container-card-image">
+              <img
+                class="lazy"
+                alt="Baby sitting on clean carpet. "
+                title="Carpet-Cleaning-Baby-on-Carpet"
+                src="https://pristinegreencleaning.com/assets/images/service/carpet-cleaner-nyc.webp"
+                style
+              />
+            </div>
+            <!-- card details -->
+            <div class="slider-container-card-detail flex flex-col">
+              <p>Cartpet Cleaning</p>
+              <p>
+                As one of the top carpet cleaner services in NYC, we specialize
+                resolving all types of issues including pet stains, pet odors,
+                urine stains, food stains, wine stains and more!
+              </p>
+              <a href="#" class="slider-container-card-detail-learnmore"
+                >Learn More Carpet Cleaning</a
+              >
+            </div>
+          </div>
+          <div class="slider-container-card">
+            <!-- img -->
+            <div class="slider-container-card-image">
+              <img
+                class="lazy"
+                alt="Baby sitting on clean carpet. "
+                title="Carpet-Cleaning-Baby-on-Carpet"
+                src="https://pristinegreencleaning.com/assets/images/service/carpet-cleaner-nyc.webp"
+                style
+              />
+            </div>
+            <!-- card details -->
+            <div class="slider-container-card-detail flex flex-col">
+              <p>Cartpet Cleaning</p>
+              <p>
+                As one of the top carpet cleaner services in NYC, we specialize
+                resolving all types of issues including pet stains, pet odors,
+                urine stains, food stains, wine stains and more!
+              </p>
+              <a href="#" class="slider-container-card-detail-learnmore"
+                >Learn More Carpet Cleaning</a
+              >
+            </div>
+          </div>
+          <div class="slider-container-card">
+            <!-- img -->
+            <div class="slider-container-card-image">
+              <img
+                class="lazy"
+                alt="Baby sitting on clean carpet. "
+                title="Carpet-Cleaning-Baby-on-Carpet"
+                src="https://pristinegreencleaning.com/assets/images/service/carpet-cleaner-nyc.webp"
+                style
+              />
+            </div>
+            <!-- card details -->
+            <div class="slider-container-card-detail flex flex-col">
+              <p>Cartpet Cleaning</p>
+              <p>
+                As one of the top carpet cleaner services in NYC, we specialize
+                resolving all types of issues including pet stains, pet odors,
+                urine stains, food stains, wine stains and more!
+              </p>
+              <a href="#" class="slider-container-card-detail-learnmore"
+                >Learn More Carpet Cleaning</a
+              >
+            </div>
+          </div>
+          <div class="slider-container-card">
+            <!-- img -->
+            <div class="slider-container-card-image">
+              <img
+                class="lazy"
+                alt="Baby sitting on clean carpet. "
+                title="Carpet-Cleaning-Baby-on-Carpet"
+                src="https://pristinegreencleaning.com/assets/images/service/carpet-cleaner-nyc.webp"
+                style
+              />
+            </div>
+            <!-- card details -->
+            <div class="slider-container-card-detail flex flex-col">
+              <p>Cartpet Cleaning</p>
+              <p>
+                As one of the top carpet cleaner services in NYC, we specialize
+                resolving all types of issues including pet stains, pet odors,
+                urine stains, food stains, wine stains and more!
+              </p>
+              <a href="#" class="slider-container-card-detail-learnmore"
+                >Learn More Carpet Cleaning</a
+              >
+            </div>
+          </div>
+        </div>
+        <!-- slider arrows (next-preivous) -->
+        <div class="slider-container-card-arrow flex justify-between">
+          <div class="prev-button"></div>
+          <div class="next-button"></div>
+        </div>
+      </div>
+    </section>
+
+    <!-- footer -->
     <footer>
       <!-- section 1 -->
       <div class="footer-1">
-        <div class="footer-1-container flex justify-between">
+        <div class="footer-1-container flex justify-between gap-2">
           <div class="footer-1-container__imgs flex flex-col">
             <div class="flex gap-1">
               <a href="#">
@@ -360,102 +617,109 @@
             </ul>
           </div>
           <div class="footer-1-container__Service">
-            <p class="footer-heading">SERIVCE AREAS</p>
+            <p class="footer-heading">OUR LINKS</p>
             <ul class="footer-1-container__Service-links flex flex-col gap-1">
               <li>
-                <a href="#">Astoria</a>
+                <a href="#">About Us</a>
               </li>
               <li>
-                <a href="#">East Village</a>
+                <a href="#">Carpet Cleaning</a>
               </li>
               <li>
-                <a href="#">Gramercy Park</a>
+                <a href="#">Upholstery Cleaning</a>
               </li>
               <li>
-                <a href="#">Lower East Side</a>
+                <a href="#">Area Rug Cleaning</a>
               </li>
               <li>
-                <a href="#">Maspeth </a>
+                <a href="#">Commercial Cleaning</a>
               </li>
               <li>
-                <a href="#">Midtown </a>
+                <a href="#">Couch Cleaning </a>
               </li>
               <li>
-                <a href="#">Park Slope</a>
+                <a href="#">Green Cleaning</a>
               </li>
               <li>
-                <a href="#">Prospect Park South</a>
+                <a href="#">Mattress Cleaning</a>
               </li>
               <li>
-                <a href="#">Queens Village </a>
+                <a href="#">FAQ’s </a>
               </li>
               <li>
-                <a href="#">Union Square </a>
-              </li>
-              <li>
-                <a href="#">Upper West Side </a>
-              </li>
-              <li>
-                <a href="#">Union Square </a>
-              </li>
-              <li>
-                <a href="#">Woodside </a>
-              </li>
-              <li>
-                <a href="#">Woodhaven</a>
-              </li>
-              <li>
-                <a href="#">View More Areas</a>
+                <a href="#">Coupon </a>
               </li>
             </ul>
           </div>
           <div class="footer-1-container__Service">
-            <p class="footer-heading">SERIVCE AREAS</p>
+            <p class="footer-heading">GET IN TOUCH</p>
             <ul class="footer-1-container__Service-links flex flex-col gap-1">
               <li>
-                <a href="#">Astoria</a>
+                <a href="#">PristineGreen Upholstery and Carpet Cleaning</a>
               </li>
               <li>
-                <a href="#">East Village</a>
+                <a href="#">115 E 23rd St 3rd floor</a>
               </li>
               <li>
-                <a href="#">Gramercy Park</a>
+                <a href="#">New York, NY 10010</a>
               </li>
               <li>
-                <a href="#">Lower East Side</a>
+                <a href="#">347-871-6530</a>
               </li>
               <li>
-                <a href="#">Maspeth </a>
+                <a href="#">Maps & Directions </a>
+              </li>
+              <br />
+              <li>
+                <a href="#">PristineGreen Upholstery and Carpet Cleaning </a>
               </li>
               <li>
-                <a href="#">Midtown </a>
+                <a href="#">265 E 78th St #6E, </a>
               </li>
               <li>
-                <a href="#">Park Slope</a>
+                <a href="#">New York, NY 10075</a>
               </li>
               <li>
-                <a href="#">Prospect Park South</a>
+                <a href="#">917-727-0936 </a>
               </li>
               <li>
-                <a href="#">Queens Village </a>
+                <a href="#">Maps & Directions </a>
+              </li>
+              <br />
+              <li>
+                <a href="#">PristineGreen Upholstery and Carpet Cleaning </a>
               </li>
               <li>
-                <a href="#">Union Square </a>
+                <a href="#">6705 Myrtle Ave #1015 </a>
               </li>
               <li>
-                <a href="#">Upper West Side </a>
+                <a href="#">Queens, NY 11385</a>
               </li>
               <li>
-                <a href="#">Union Square </a>
+                <a href="#">347-871-6530</a>
               </li>
               <li>
-                <a href="#">Woodside </a>
+                <a href="#">Maps & Directions</a>
+              </li>
+              <br />
+              <li>
+                <a href="#">PristineGreen Upholstery and Carpet Cleaning </a>
               </li>
               <li>
-                <a href="#">Woodhaven</a>
+                <a href="#">3811 Ditmars Blvd #1068 </a>
               </li>
               <li>
-                <a href="#">View More Areas</a>
+                <a href="#">Queens, NY 11105</a>
+              </li>
+              <li>
+                <a href="#">347-871-6530</a>
+              </li>
+              <li>
+                <a href="#">Maps & Directions</a>
+              </li>
+              <br />
+              <li>
+                <a href="#">sales@pristinegreencleaning.com</a>
               </li>
             </ul>
           </div>
