review section added

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
               <li class="link clean-link">
                 <span> Cleaning Services </span>
                 <!-- show on hover (cleaning services ) -->
-                <div class="clean-serivces-hover flex flex-col justify-center ">
+                <div class="clean-serivces-hover flex flex-col justify-center">
                   <div class="flex justify-between">
                     <div>
                       <h2>Cleaning Services</h2>
@@ -161,11 +161,11 @@
       <div>Service Areas</div>
       <div>Gallery</div>
       <div>Conatct Us</div>
-      <div>
-        <div class="flex flex-col gap-1">
+      <div class="clean-services-links">
+        <div class="">
           <p>Our socials</p>
           <!-- social links -->
-          <div class="flex gap-4">
+          <div class="">
             <a
               href="https://www.facebook.com/PristineGreen-Upholstery-and-Carpet-Cleaning-380402999024630/?__tn__=%2Cg/"
               target="_blank"
@@ -234,6 +234,25 @@
         </div>
       </div>
     </main>
+    <section class="review-section flex flex-col">
+      <div class="review-section-container flex item-center justify-center">
+        <div class="flex justify-center item-center">
+          <span class="font-1 font-median">2000+</span>
+          <span class="font-2">Happy NYC Cutomers</span>
+        </div>
+        <div class="flex justify-center item-center">
+          <span class="font-1 font-median">90+</span>
+          <img
+            class="lazy"
+            alt="rating"
+            height="44"
+            style="padding-bottom: 3px"
+            src="https://pristinegreencleaning.com/assets/images/154-1548379_google-5-stars-png-star-transparent-png(2).png"
+          />
+          <span class="font-2">Reviews</span>
+        </div>
+      </div>
+    </section>
 
     <!-- Slider -->
     <section class="slider-section">
