review section done

--- a/index.html
+++ b/index.html
@@ -253,6 +253,9 @@
         </div>
       </div>
     </section>
+    <!-- featuer section -->
+
+    <section></section>
 
     <!-- Slider -->
     <section class="slider-section">
